--- a/workspace.yaml
+++ b/workspace.yaml
@@ -5,6 +5,7 @@ metadata:
   name: "random"
 spec:
   organization: dev-venkata
+  secretsMountPath: "/tmp/secrets"
   module:
     source: "joatmon08/hello/random"
     version: "6.0.0"
