--- a/workspace.yaml
+++ b/workspace.yaml
@@ -1,24 +1,33 @@
 apiVersion: app.terraform.io/v1alpha1
 kind: Workspace
 metadata:
-  name: greetings-test-1
+  name: "random"
 spec:
   organization: dev-venkata
   secretsMountPath: "/tmp/secrets"
   module:
-    source: "terraform-aws-modules/sqs/aws"
-    version: "2.0.0"
+    source: "joatmon08/hello/random"
+    version: "5.0.0"
   outputs:
-    - key: url
-      moduleOutputName: this_sqs_queue_id
+    - key: pet
+      moduleOutputName: pet
+    - key: list_of_pets
+      moduleOutputName: list_of_pets
+    - key: quoted_some_key
+      moduleOutputName: quoted_some_key
   variables:
-    - key: name
-      value: greetings.fifo
+    - key: hellos
+      value: |
+        {
+          hello="world"
+          second_hello="universe"
+        }
+      hcl: true
       sensitive: false
       environmentVariable: false
-    - key: fifo_queue
-      value: "true"
+    - key: some_key
       sensitive: false
+      value: '"something"'
       environmentVariable: false
     - key: CONFIRM_DESTROY
       value: "1"
