--- a/workspace.yaml
+++ b/workspace.yaml
@@ -27,7 +27,7 @@ spec:
       environmentVariable: false
     - key: some_key
       sensitive: false
-      value: '"somethisng"'
+      value: '"ssadsadasd"'
       environmentVariable: false
     - key: CONFIRM_DESTROY
       value: "0"
