--- a/workspace.yaml
+++ b/workspace.yaml
@@ -29,3 +29,7 @@ spec:
       sensitive: false
       value: '"ssadsadasd"'
       environmentVariable: false
+   - key: CONFIRM_DESTROY
+     value: "1"
+     sensitive: false
+     environmentVariable: true      
