--- a/db.yaml
+++ b/db.yaml
@@ -6,5 +6,4 @@ spec:
   organization: dev-venkata
   secretsMountPath: "/tmp/secrets"
   module:
-    source: "GoogleCloudPlatform/sql-db/google//modules/postgresql"
-    version: "8.0.0"
+    source: "git::https://github.com/GlueOps/terraform-gcp-cloud-sql.git"
