--- a/db.yaml
+++ b/db.yaml
@@ -7,5 +7,8 @@ spec:
   secretsMountPath: "/tmp/secrets"
   module:
     source: "git::https://github.com/GlueOps/terraform-gcp-cloud-sql.git"
-    
-    
+  variables:
+      environmentVariable: true
+    - key: GOOGLE_CREDENTIALS
+      sensitive: true
+      environmentVariable: true
