--- a/db.yaml
+++ b/db.yaml
@@ -1,7 +1,7 @@
 apiVersion: app.terraform.io/v1alpha1
 kind: Workspace
 metadata:
-  name: "db-fun"
+  name: "db-fun-1"
 spec:
   organization: dev-venkata
   secretsMountPath: "/tmp/secrets"
