--- a/db.yaml
+++ b/db.yaml
@@ -11,7 +11,7 @@ spec:
     - key: GOOGLE_CREDENTIALS
       sensitive: true
       environmentVariable: true
-    - key: TOGGLE_ON_OFF_TO_RETRY
+    - key: TOGGLE_TO_RETRY
       value: "0"
       sensitive: false
       environmentVariable: true
