--- a/db.yaml
+++ b/db.yaml
@@ -15,7 +15,7 @@ spec:
       sensitive: true
       environmentVariable: true
     - key: TOGGLE_TO_RETRY
-      value: 1
+      value: "1"
       sensitive: false
       environmentVariable: true
 
