--- a/db.yaml
+++ b/db.yaml
@@ -15,7 +15,7 @@ spec:
       sensitive: true
       environmentVariable: true
     - key: TOGGLE_TO_RETRY
-      value: "0"
       sensitive: false
+      value: '"1"'
       environmentVariable: false
 
