--- a/db.yaml
+++ b/db.yaml
@@ -14,4 +14,8 @@ spec:
     - key: GOOGLE_CREDENTIALS
       sensitive: true
       environmentVariable: true
+    - key: TOGGLE_TO_RETRY
+      sensitive: false
+      value: '"0"'
+      environmentVariable: false
 
