--- a/db.yaml
+++ b/db.yaml
@@ -7,8 +7,15 @@ spec:
   secretsMountPath: "/tmp/secrets"
   module:
     source: "git::https://github.com/GlueOps/terraform-gcp-cloud-sql.git"
+  outputs:
+    - key: TOGGLED_SWITCH
+      moduleOutputName: TOGGLED_SWITCH
   variables:
     - key: GOOGLE_CREDENTIALS
       sensitive: true
       environmentVariable: true
+    - key: TOGGLE_TO_RETRY
+      sensitive: false
+      value: '"0"'
+      environmentVariable: false
 
