--- a/db.yaml
+++ b/db.yaml
@@ -17,5 +17,5 @@ spec:
     - key: TOGGLE_TO_RETRY
       sensitive: false
       value: '"0"'
-      environmentVariable: false
+      environmentVariable: true
 
