--- a/db.yaml
+++ b/db.yaml
@@ -16,6 +16,6 @@ spec:
       environmentVariable: true
     - key: TOGGLE_TO_RETRY
       sensitive: false
-      value: '"12ss"'
+      value: '"1"'
       environmentVariable: true
 
