--- a/db.yaml
+++ b/db.yaml
@@ -16,6 +16,6 @@ spec:
       environmentVariable: true
     - key: TOGGLE_TO_RERUN
       sensitive: false
-      value: '"3"'
+      value: '"asdasd3"'
       environmentVariable: true
 
