--- a/vault.yaml
+++ b/vault.yaml
@@ -11,7 +11,7 @@ spec:
   variables:
     - key: TOGGLE_TO_RERUN
       sensitive: false
-      value: '"2"'
+      value: '"1"'
       environmentVariable: true
     - key: VAULT_ADDR
       sensitive: false
@@ -19,5 +19,5 @@ spec:
       environmentVariable: false
     - key: TF_CLI_ARGS
       sensitive: false
-      value: "-target=module.vaultoperator_init.default"
+      value: "-target=module.operator.vaultoperator_init.default"
       environmentVariable: true
